2007-08-28  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin.

        <rdar://problem/5424866> Bottom portion of any Web Clip widget appears transparent
        
        * WebCoreSupport/WebFrameBridge.mm:
        Use the enum from FrameLoaderTypes.h.
        
        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::objectContentType):
        Return ObjectContentNetscapePlugin and ObjectContentOtherPlugin depending on the plug-in type.

2007-08-24  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Darin.

        <rdar://problem/5437038> 1 credential object leaked for each call to credentialWithUser:password:persistence
        - Use initWithUser instead of credentialWithUser because credentialWithUser leaks.

        * Panels/WebAuthenticationPanel.m:
        (-[WebAuthenticationPanel runAsModalDialogWithChallenge:]):
        (-[WebAuthenticationPanel sheetDidEnd:returnCode:contextInfo:]):

2007-08-24  Adele Peterson  <adele@apple.com>

        Fix by Darin, reviewed by Adele.

        Fix for <rdar://problem/5433422> Upon quitting, WebKit loads the WebPlugin shared database and immediately closes it

        * Plugins/WebPluginDatabase.h: Added closeSharedDatabase, which won't create a new database if we're just trying to close it.
        * Plugins/WebPluginDatabase.m: (+[WebPluginDatabase closeSharedDatabase]): Added.
        * WebView/WebView.mm:
        (-[WebView _close]): Call closeSharedDatabase.
        (+[WebView _applicationWillTerminate]): Call closeSharedDatabase.

2007-08-24  Timothy Hatcher  <timothy@apple.com>

        Reviewed by John Sullivan.

        <rdar://problem/5410937> HIWebView in SimpleCarbonWeb doesn't seem to be getting adequate invalidation when window is resized

        This is a more localized fix for yesterday's change. Now explicitly call _web_layoutIfNeededRecursive inside the