@@ -1,3 +1,9 @@
+2007-08-29  Anders Carlsson  <andersca@apple.com>
+
+        Fix 64-bit build.
+
+        * WebCoreSupport/WebFrameBridge.mm:
+
 2007-08-28  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Darin.
